--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Application-Properties</module>
         <module>Profiles</module>
+        <module>spring-deploy-docker-image-to-aws</module>
         <module>spring-boot-vuejs-jwt-auth/Spring-Boot-API</module>
         <module>spring-boot-keycloak-auth/Spring-Boot-API</module>
         <module>JUnit4-Tests</module>
