--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.keycloak</groupId>
+      <artifactId>keycloak-admin-client</artifactId>
+      <version>20.0.0</version>
+    </dependency>
     <!--<dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
