--- a/search-in-keycloak-with-spring-boot/pom.xml
+++ b/search-in-keycloak-with-spring-boot/pom.xml
@@ -8,7 +8,7 @@
         <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.howtodoinjava</groupId>
     <artifactId>search-in-keycloak-with-spring-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>search-in-keycloak-with-spring-boot</name>
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-admin-client</artifactId>
-            <version>19.0.1</version>
+            <version>21.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
