--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
       <artifactId>keycloak-admin-client</artifactId>
       <version>20.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.awspring.cloud</groupId>
+      <artifactId>spring-cloud-aws-dynamodb</artifactId>
+      <version>3.0.0</version>
+    </dependency>
     <!--<dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
