--- a/spring-aws-dynamodb-example/src/main/resources/application.properties
+++ b/spring-aws-dynamodb-example/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-aws.dynamodb.accessKey=accessKey
-aws.dynamodb.secretKey=secretKey
+aws.dynamodb.accesskey=accesskey
+aws.dynamodb.secretkey=secretkey
 aws.dynamodb.endpoint=http://localhost:8000
