--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <module>spring-boot-mvc-thymeleaf</module>
     <module>spring_boot_elastic-beanstalk-aws</module>
     <module>Spring-data-redis-lettuce</module>
+    <module>spring-redis-pubsub-stream</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
