--- a/spring-redis-pubsub/order-events-subscriber/pom.xml
+++ b/spring-redis-pubsub/order-events-subscriber/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>common-events-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.redis.testcontainers</groupId>
+            <artifactId>testcontainers-redis</artifactId>
+            <version>1.4.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
