--- a/spring-boot-template-engines-demo/src/main/resources/application.properties
+++ b/spring-boot-template-engines-demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.mustache.prefix=classpath:/templates/
-#spring.mustache.suffix=.mustache
-#spring.mustache.content-type=text/html; charset=UTF-8
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.mustache
+spring.mustache.content-type=text/html; charset=UTF-8
 
 
 # Thymeleaf template prefix (default: classpath:/templates/)
@@ -13,5 +13,5 @@ spring.thymeleaf.cache=true
 #spring.freemarker.suffix=.ftlh
 #spring.freemarker.template-loader-path=classpath:/templates/
 
-spring.mvc.view.prefix: src/main/webapp/WEB-INF/views/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix=WEB-INF/views/
+spring.mvc.view.suffix=.jsp
