--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <module>spring-boot-docker-compose</module>
     <module>chatgpt-demo</module>
     <module>spring-boot-long-running-tasks</module>
+      <module>spring-boot-file-upload-restapi</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
