Junit for producer and consumer

--- a/spring-kafka-example/inventory-event-consumer/src/main/resources/application-dev.yml
+++ b/spring-kafka-example/inventory-event-consumer/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ server:
 
 
 topics:
-  retry: 'library-events.RETRY'
-  dlt: 'library-events.DLT'
+  retry: 'inventory-events.RETRY'
+  dlt: 'inventory-events.DLT'
 
 spring:
   kafka:
