--- a/spring-kafka-example/inventory-event-consumer/src/main/resources/application-prod.yml
+++ b/spring-kafka-example/inventory-event-consumer/src/main/resources/application-prod.yml
@@ -13,6 +13,8 @@ spring:
       bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
       key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      properties:
+        spring.json.trusted.packages: '*'
     producer:
       bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
