--- a/spring-kafka-example/inventory-event-producer/src/main/resources/application-dev.yml
+++ b/spring-kafka-example/inventory-event-producer/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         acks: all
         retries: 10
