--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <module>chatgpt-demo</module>
     <module>spring-boot-long-running-tasks</module>
     <module>spring-boot-file-upload-restapi</module>
+    <module>spring-kafka-streams-example</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
