--- a/spring-boot-response-entity-demo/src/main/resources/application.properties
+++ b/spring-boot-response-entity-demo/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/student_management?useSSL=false
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
-#Hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Server Configuration
 server.port=8080
