--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.howtodoinjava.demo</groupId>
@@ -48,14 +48,16 @@
     <module>spring-boot-file-upload-restapi</module>
     <module>spring-kafka-streams-example</module>
     <module>spring-boot-vaadin-demo</module>
-    <module>spring-security-authentication-aws-cognito/AWSCognitoBasicAuthentication</module>
+    <module>
+      spring-security-authentication-aws-cognito/AWSCognitoBasicAuthentication
+    </module>
     <module>search-in-keycloak-with-spring-boot</module>
     <module>spring-boot-response-entity-demo</module>
     <module>spring-boot-validate-list</module>
     <module>thymeleaf-upload-display-images</module>
     <module>rest-api-timeout</module>
-      <module>podman-deployment</module>
-      <module>spring-boot-batch</module>
+    <module>podman-deployment</module>
+    <module>spring-boot-batch</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
