--- a/spring-boot-batch/src/main/resources/application.properties
+++ b/spring-boot-batch/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -8,4 +8,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 
-logging.level.net.ttddyy.dsproxy.listener=debug
+# Uncomment for using the RAMJobStore
+#spring.quartz.job-store-type=jdbc
+
+spring.quartz.job-store-type=jdbc
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+spring.quartz.properties.org.quartz.jobStore.isClustered=false
+spring.quartz.properties.org.quartz.scheduler.instanceName=MyScheduler
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
