--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>rest-api-timeout</module>
     <module>podman-deployment</module>
     <module>spring-boot-batch</module>
+    <module>application-events</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
