--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <module>podman-deployment</module>
     <module>spring-boot-batch</module>
     <module>application-events</module>
+    <module>spring-batch-excel</module>
   </modules>
   <name>spring-boot-examples</name>
   <url>https://howtodoinjava.com</url>
